--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Journey with God
 description: Follower of Jesus Christ
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/livelybride-faith/devotionals/blob/master/images/RedPearl.jpeg
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/livelybride-faith
+  github: livelybride-faith
   instagram:
   linkedin:
   pinterest:
