--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Journey with God
 description: Follower of Jesus Christ
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/livelybride-faith/devotionals/blob/master/images/RedPearl.jpeg
-
+avatar: 
 #
 # Flags below are optional
 #
