--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Journey with God
 
 # Short bio or description (displayed in the header)
-description: Follower of Jesus Christ
+description: Written by a human brain, pick out the bones & enjoy the rest :)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: 
