--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,8 @@ exclude:
 
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
+  - jekyll-paginate
 
 show_excerpts: true
 excerpt_separator: ""
